2008-10-20 Jim Garlick <garlick@llnl.gov>

	* configure.ac : Force 64-bit on biarch ppc64 configurations.
	This is needed because Lustre libs are 64-bit only in this environment.

2008-10-19 Jim Garlick <garlick@llnl.gov>

	* src/getconf.[ch] : Redo interface.  Handle comments properly.

	* test/tconf.c, test/13.sh, test/13.exp, test/14.sh, test/14.exp : 
	Tests for above.

	* src/quota.c, src/repquota.c : Use new configuration interface.

	* src/getquota_nfs.c : If debug, show responses from servers and
	indicate if any quirks are being applied.

	* src/quota.c, src/repquota.c : Add --debug option.

2008-06-03 Jim Garlick <garlick@llnl.gov>

	* : tag 2.1

	* htdocs/index.html : Add SF logo per policy.

2008-05-30 Jim Garlick <garlick@llnl.gov>

	* rquota.spec : Set --program-prefix to prevent AIX from adding one.

	* src/listint.c : Silence warning on AIX.

2008-05-23 Jim Garlick <garlick@llnl.gov>

	* : tag 2.0

2008-05-22 Jim Garlick <garlick@llnl.gov>

	* src/repquota.c, src/quota.c : Tidy up longopt handling.
	
2008-05-20 Jim Garlick <garlick@llnl.gov>

	* src/repquota.c : Fix error an error message.

	* src/repquota.1 : Fix option descriptions.

2008-05-20 Jim Garlick <garlick@llnl.gov>

	* : tag 1.10

	* src/* : Main source moved here.

	* test/* : Test infrastructure created here with some initial tests.

	* getquota.c : Add some test hooks.

	* quota.spec.in : Use install target.

	* src/Makefile.am : Add man pages to man_MANS. 

	* src/listint.[ch] : Simple list-of-ints handling functions.

	* src/repquota.c : Change --min-uid, --max-uid option to --uid-range.
	Swap -u and -U.

2008-05-19 Jim Garlick <garlick@llnl.gov>

	* getquota.[ch], quota.c : If not in -v mode and warnings are
	issued, notify user to run -v to get more info.

	* quota.c : Add getopt_long() support.

2008-05-13 Jim Garlick <garlick@llnl.gov>

	* config/*, Makefile.in, configure, INSTALL : 
	Checked in bootstrap products.

2008-05-12 Jim Garlick <garlick@llnl.gov>
